--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -22,12 +22,13 @@
 
             &__combo {
                 width: calc(50% - 12px);
+                list-style: none;
 
                 img {
                     max-height: 60px;
                     margin-bottom: 30px;
                 }
-                
+
                 button {
                     width: 100%;
                     display: block;
